// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoColumn No props 1`] = `
<section
  className="css-d5m9xt-infoColumnClass"
/>
`;

exports[`InfoColumn no button 1`] = `
<section
  className="css-d5m9xt-infoColumnClass"
>
  <aside
    className="css-13d5f7-infoBoxClass"
  >
    <h3
      className="css-139kw5e-infoBoxHeaderClass"
    >
      Info!
    </h3>
    <div
      className="css-xky2ol-infoBoxContentClass"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    className="css-13d5f7-infoBoxClass"
  >
    <div
      className="css-xky2ol-infoBoxContentClass"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with button 1`] = `
<section
  className="css-d5m9xt-infoColumnClass"
>
  <aside
    className="css-13d5f7-infoBoxClass"
  >
    <h3
      className="css-139kw5e-infoBoxHeaderClass"
    >
      Info!
    </h3>
    <div
      className="css-xky2ol-infoBoxContentClass"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
      <button
        type="button"
      >
        Submit
      </button>
    </div>
  </aside>
  <aside
    className="css-13d5f7-infoBoxClass"
  >
    <div
      className="css-xky2ol-infoBoxContentClass"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with info and meta fields 1`] = `
<section
  className="css-d5m9xt-infoColumnClass"
>
  <aside
    className="css-13d5f7-infoBoxClass"
  >
    <h3
      className="css-139kw5e-infoBoxHeaderClass"
    />
    <div
      className="css-xky2ol-infoBoxContentClass"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    className="css-13d5f7-infoBoxClass"
  >
    <div
      className="css-xky2ol-infoBoxContentClass"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with infoFields 1`] = `
<section
  className="css-d5m9xt-infoColumnClass"
>
  <aside
    className="css-13d5f7-infoBoxClass"
  >
    <h3
      className="css-139kw5e-infoBoxHeaderClass"
    />
    <div
      className="css-xky2ol-infoBoxContentClass"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with metaFields 1`] = `
<section
  className="css-d5m9xt-infoColumnClass"
>
  <aside
    className="css-13d5f7-infoBoxClass"
  >
    <div
      className="css-xky2ol-infoBoxContentClass"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;
